--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <link href="C:\Users\Kaleb Merriman\Documents\UWschooling\Homework\HW-Wireframe\style.css" rel="stylesheet" type="text/css">
+        <link href="style.css" rel="stylesheet" type="text/css">
         <title> HW-Wireframe </title>
     </head>
 
